--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -32,19 +32,27 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - name: Deploy to the servers
-      uses: appleboy/ssh-action@v0.1.10
-      env:
-        TAG: ${{ needs.check_tag.outputs.TAG }}
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }} # Create a new user: ansible
-        key: ${{ secrets.KEY }} # Create a new key and use it
-        port: ${{ secrets.PORT }}
-        envs: TAG
-        script: | 
-          ansible-playbook -i inventories/app.yaml playbook/app.yaml
-          # docker pull mahfudza16/simplify:$TAG
-          # wget -O docker-compose.yml github_link
-          # untuk .env inject manual
-          # docker-compose up -d
+    - name: Deploy
+      run: |
+        ssh-agent -s
+        mkdir -p ~/.ssh
+        echo "${{ secrets.SSH_PRIV_KEY}}" > ~/.ssh/ansible
+        echo "${{ secrets.SSH_HOST }} ${{ secrets.SSH_PUB_KEY }}"> ~/.ssh/known_hosts
+        chmod 600 ~/.ssh/ansible ~/.ssh/known_hosts
+        ansible-playbook -i inventories/app.yaml playbook/app.yaml
+    # - name: Deploy to the servers
+    #   uses: appleboy/ssh-action@v0.1.10
+    #   env:
+    #     TAG: ${{ needs.check_tag.outputs.TAG }}
+    #   with:
+    #     host: ${{ secrets.HOST }}
+    #     username: ${{ secrets.USERNAME }} # Create a new user: ansible
+    #     key: ${{ secrets.KEY }} # Create a new key and use it
+    #     port: ${{ secrets.PORT }}
+    #     envs: TAG
+    #     script: | 
+    #       ansible-playbook -i inventories/app.yaml playbook/app.yaml
+    #       # docker pull mahfudza16/simplify:$TAG
+    #       # wget -O docker-compose.yml github_link
+    #       # untuk .env inject manual
+    #       # docker-compose up -d
