test: test 3 image_tag: v2.3

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -37,9 +37,8 @@ jobs:
         ssh-agent -s
         mkdir -p ~/.ssh
         echo "${{ secrets.SSH_PRIV_KEY}}" > ~/.ssh/ansible
-        echo "${{ secrets.SSH_HOST }} ${{ secrets.SSH_PUB_KEY }}"> ~/.ssh/known_hosts
-        chmod 600 ~/.ssh/ansible ~/.ssh/known_hosts
-        ansible-playbook -i inventory/worker_hosts playbook/app.yaml
+        chmod 600 ~/.ssh/ansible
+        ansible-playbook -i inventory/worker_hosts playbook/app.yaml -vvv
     # - name: Deploy to the servers
     #   uses: appleboy/ssh-action@v0.1.10
     #   env:
