--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -4,7 +4,6 @@ on:
   pull_request:
     types:
       - closed
-  push:
 
 jobs:
   check_tag:
@@ -33,26 +32,11 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
+    - name: webfactory/ssh-agent
+      uses: webfactory/ssh-agent@v0.8.0
+      with:
+        ssh-private-key: ${{ secrets.SSH_PRIV_KEY }}
     - name: Deploy
       run: |
-        ssh-agent -s
-        mkdir -p ~/.ssh
-        echo "${{ secrets.SSH_PRIV_KEY}}" > ~/.ssh/ansible
-        chmod 600 ~/.ssh/ansible
-        ansible-playbook -i inventory/worker_hosts playbook/app.yaml --private-key ~/.ssh/ansible -vvv
-    # - name: Deploy to the servers
-    #   uses: appleboy/ssh-action@v0.1.10
-    #   env:
-    #     TAG: ${{ needs.check_tag.outputs.TAG }}
-    #   with:
-    #     host: ${{ secrets.HOST }}
-    #     username: ${{ secrets.USERNAME }} # Create a new user: ansible
-    #     key: ${{ secrets.KEY }} # Create a new key and use it
-    #     port: ${{ secrets.PORT }}
-    #     envs: TAG
-    #     script: | 
-    #       ansible-playbook -i inventories/app.yaml playbook/app.yaml
-    #       # docker pull mahfudza16/simplify:$TAG
-    #       # wget -O docker-compose.yml github_link
-    #       # untuk .env inject manual
-    #       # docker-compose up -d
+        ansible-playbook -i inventory/worker_hosts playbook/app.yaml --extra-vars "APP_IMAGE_TAG=`echo ${{ needs.check_tag.outputs.TAG }}`" --vault-password-file vault_file -vv
+
