fix: Add ansible_become_password var image_tag: v2.3

--- a/playbook/roles/app/tasks/main.yaml
+++ b/playbook/roles/app/tasks/main.yaml
@@ -3,6 +3,7 @@
   template:
     src: .env.j2
     dest: ~/app/simplify/.env
+  no_log: True
 - name: Copy docker-compose.yaml file
   copy:
     src: docker-compose.yaml
