--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -98,6 +98,6 @@ jobs:
     - name: Deploy
       run: |
         echo ${{ secrets.VAULT_PASSWORD }} > vault_file
-        ansible-playbook -i inventory/worker_hosts playbook/app.yaml --tags "${{ inputs.ROLE  }}" --extra-vars "APP_IMAGE_TAG=`echo ${{ inputs.TAG }}`" --vault-password-file vault_file -vvv
+        ansible-playbook -i inventory/worker_hosts playbook/app.yaml --tags "${{ inputs.ROLE  }}" --extra-vars "APP_IMAGE_TAG=`echo ${{ inputs.TAG }}`" --vault-password-file vault_file -v
 
 
